cargo-features = ["strip"]

[workspace]
resolver = "2"
members = [
    "runner/loader",
    "playground",
]

[profile.dev]
panic = "abort"
[profile.dev.package."*"]
opt-level = 3
[profile.dev.package.project]
opt-level = 3
[profile.dev.package.atlas]
opt-level = 3

[profile.release]
lto = "thin"
panic = "abort"
