[workspace]
resolver = "3"
members = [
    "runner/loader",
    "playground",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
gml = { path = "gml" }
project = { path = "project" }
runner = { path = "runner" }
wasm = { path = "runner/wasm" }
win32 = { path = "runner/win32" }
quickdry = "0.1.3"
bstr = { version = "1.0", default-features = false }
winapi = { version = "0.3" }
quote = "1.0"
syn = { version = "2.0" }

[profile.dev]
panic = "abort"
[profile.dev.package."*"]
opt-level = 3
[profile.dev.package.project]
opt-level = 3
[profile.dev.package.atlas]
opt-level = 3

[profile.release]
lto = "thin"
panic = "abort"
