[package]
name = "engine"
version = "0.1.0"
authors = ["Russell Johnston <rpjohnst@gmail.com>"]
edition = "2018"

[dependencies]
gml = { path = "../gml" }
bstr = { version = "0.2", default-features = false, features = ["std"] }

[target.wasm32-unknown-unknown.dependencies]
wasm-host = { path = "../wasm-host" }
wasm-bindgen = "0.2"
