[package]
name = "gml"
version = "0.1.0"
authors = ["Russell Johnston <rpjohnst@gmail.com>"]
edition = "2018"

[dependencies]
gml-meta = { path = "meta" }
project = { path = "../project" }
bstr = { version = "0.2", default-features = false }

[target.wasm32-unknown-unknown.dependencies]
wasm-host = { path = "../wasm-host" }
