[package]
name = "playground"
version = "0.1.0"
authors = ["Russell Johnston <rpjohnst@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
gml = { path = "../gml" }
runner = { path = "../runner" }
project = { path = "../project" }
quickdry = "0.1.2"
wasm = { path = "../runner/wasm" }
