[package]
name = "playground"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
gml = { workspace = true }
project = { workspace = true }
runner = { workspace = true }
wasm = { workspace = true }
quickdry = { workspace = true }
