[package]
name = "runner"
version = "0.1.0"
authors = ["Russell Johnston <rpjohnst@gmail.com>"]
edition = "2018"

[dependencies]
gml = { path = "../gml" }
project = { path = "../project" }
bstr = { version = "0.2", default-features = false, features = ["std"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm = { path = "wasm" }

[target.'cfg(windows)'.dependencies]
win32 = { path = "win32" }
winapi = { version = "0.3", features = ["synchapi", "winbase", "winuser", "dxgi1_3", "d3d11"] }

[target.'cfg(windows)'.build-dependencies]
d3dcompiler = { path = "d3dcompiler" }
