[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[dependencies]
gml = { path = "../gml" }
project = { path = "../project" }
atlas = { path = "atlas" }
bstr = { version = "1.0", default-features = false, features = ["alloc"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm = { path = "wasm" }

[target.'cfg(windows)'.dependencies]
win32 = { path = "win32" }
winapi = { version = "0.3", features = ["dxgi1_3", "d3d11", "stringapiset", "synchapi", "winbase", "winuser"] }

[target.'cfg(windows)'.build-dependencies]
d3dcompiler = { path = "d3dcompiler" }
