[package]
name = "runner"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
gml = { workspace = true }
project = { workspace = true, features = ["read"] }
atlas = { path = "atlas" }
quickdry = { workspace = true }
bstr = { workspace = true, features = ["alloc"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm = { workspace = true }

[target.'cfg(windows)'.dependencies]
win32 = { workspace = true }
winapi = { workspace = true, features = ["dxgi1_3", "d3d11", "stringapiset", "synchapi", "winbase", "winuser"] }

[target.'cfg(windows)'.build-dependencies]
d3dcompiler = { path = "d3dcompiler" }
